syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Dubbo";
option java_package = "org.example.dubbo";

package medic_facility;

message PgParam{
    int64 limit = 1;
    int64 offset = 2;
    QueryParam param = 3;
}

message QueryParam{
    Sort sort = 1;
}

message Sort{
    SortPosition sort_position = 1;
    string column_name = 2;
}

enum SortPosition{
    SORT_POSITION_ASC = 0;
    SORT_POSITION_DESC = 1;
}

message Pagination{
    int64 current_page = 1;
    int64 current_element = 2;
    int64 total_page = 3;
    int64 total_element = 4;
}

message MedicFacilityParam{
    int64 id = 1;
    repeated int64 ids = 2;
    string email = 3;
    string unique_code = 4;
    PgParam pg_param = 5;
}

message MedicFacility{
    int64 id = 1;
    string email = 2;
    string username = 3;
    string unique_code = 4;
    string telephone_number = 5;
    string whatsapp_number = 6;
    string address = 7;
    bool is_active = 8;
}

message ListMedicFacility{
    repeated MedicFacility medic_facilities = 1;
    Pagination pg = 2;
}

service MedicFacilityService{
    rpc Get(MedicFacilityParam) returns (MedicFacility);
    rpc GetList(MedicFacilityParam) returns (ListMedicFacility);
}